@@ -13519,6 +13519,82 @@ If set to 1, force the output to terminate when the shortest input
 terminates. Default value is 0.
 @end table
 
+@section hsvhold
+Turns a certain HSV range into gray values.
+
+This filter measures color difference between set HSV color in options
+and ones measured in video stream. Depending on options, output
+colors can be changed to be gray or not.
+
+The filter accepts the following options:
+
+@table @option
+@item hue
+Set the hue value which will be used if color difference calculation.
+Allowed range is from -360 to 360. Default value is 0.
+
+@item sat
+Set the saturation value which will be used if color difference calculation.
+Allowed range is from -1 to 1. Default value is 0.
+
+@item val
+Set the value which will be used if color difference calculation.
+Allowed range is from -1 to 1. Default value is 0.
+
+@item similarity
+Set similarity percentage with the key color.
+Allowed range is from 0 to 1. Default value is 0.01.
+
+0.00001 matches only the exact key color, while 1.0 matches everything.
+
+@item blend
+Blend percentage.
+Allowed range is from 0 to 1. Default value is 0.
+
+0.0 makes pixels either fully gray, or not gray at all.
+
+Higher values result in more gray pixels, with a higher gray pixel
+the more similar the pixels color is to the key color.
+@end table
+
+@section hsvkey
+Turns a certain HSV range into transparency.
+
+This filter measures color difference between set HSV color in options
+and ones measured in video stream. Depending on options, output
+colors can be changed to transparent by adding alpha channel.
+
+The filter accepts the following options:
+
+@table @option
+@item hue
+Set the hue value which will be used if color difference calculation.
+Allowed range is from -360 to 360. Default value is 0.
+
+@item sat
+Set the saturation value which will be used if color difference calculation.
+Allowed range is from -1 to 1. Default value is 0.
+
+@item val
+Set the value which will be used if color difference calculation.
+Allowed range is from -1 to 1. Default value is 0.
+
+@item similarity
+Set similarity percentage with the key color.
+Allowed range is from 0 to 1. Default value is 0.01.
+
+0.00001 matches only the exact key color, while 1.0 matches everything.
+
+@item blend
+Blend percentage.
+Allowed range is from 0 to 1. Default value is 0.
+
+0.0 makes pixels either fully transparent, or not transparent at all.
+
+Higher values result in semi-transparent pixels, with a higher transparency
+the more similar the pixels color is to the key color.
+@end table
+
 @section hue
 
 Modify the hue and/or the saturation of the input.
